[package]
name = "filecoin-common-node-api-tool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
ascii = "1.1.0"
axum = "0.7.5"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
either = "1.12.0"
ez-jsonrpc-types = "0.1.0"
fluent-uri = "0.2.0-alpha.8"
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.2"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.13.0"
jsonschema = { version = "0.18.0", default-features = false }
nunny = "0.2.0"
openrpc-types = "0.3.3"
reqwest = "0.12.5"
schemars = { version = "0.8.21", default-features = false }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_path_to_error = "0.1.16"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["net", "rt", "signal"] }
tokio-stream = { version = "0.1.15", default-features = false, features = [
    "net",
] }
tokio-util = "0.7.11"
tower = "0.4.13"
tracing = "0.1.40"

[dev-dependencies]
expect-test = "1.5.0"
stack_list = "0.1.0"
