[package]
name = "bindings"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ez-jsonrpc = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.10.0", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.90"
lazy-regex = "3.2.0"
openrpc-types = "0.4.0"
prettyplease = "0.2.20"
proc-macro2 = { version = "1.0.93", default-features = false }
quote = { version = "1.0.38", default-features = false }
schemars = "0.8.21"
serde_json = "1.0.133"
syn = { version = "2.0.74", default-features = false }
typify = { version = "0.1.0", default-features = false }
