[package]
name = "cna-tool"
version.workspace = true
edition.workspace = true
publish.workspace = true


[dependencies]
anstream = "0.6.15"
anyhow = "1.0.90"
ascii = "1.1.0"
axum = "0.7.5"
bstr = "1.11.3"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
either = "1.12.0"
ez-jsonrpc = "0.4.0"
fluent-uri = "0.2.0-alpha.8"
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.2"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.13.0"
jsonschema = { version = "0.18.0", default-features = false }
lazy-regex = "3.2.0"
nunny = "0.2.0"
openrpc-types = "0.3.3"
proc-macro2 = { version = "1.0.87", default-features = false }
quote = { version = "1.0.37", default-features = false }
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
schemars = { version = "0.8.21", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.133"
serde_path_to_error = "0.1.16"
strum = { version = "0.26.3", features = ["derive"] }
syn = { version = "2.0.72", default-features = false }
tokio = { version = "1.38.0", features = ["net", "rt", "signal"] }
tower = "0.4.13"
tracing = "0.1.40"
typify = "0.1.0"
cna-util = { path = "../util" }
uuid = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
stack_list = "0.1.0"
